--- a/Certification App/Src/Responsive Mylearning Screen.fx.yaml
+++ b/Certification App/Src/Responsive Mylearning Screen.fx.yaml
@@ -3875,11 +3875,11 @@
                 ),
                 ClearCollect(
                     Certification,
-                    Certifications
+                    LastN(Certifications,1000)
                 ),
                 ClearCollect(
                     BU_Cert,
-                    'BU-CertificationList'
+                    LastN('BU-CertificationList',1000)
                 )
             )
         Tooltip: ="Refresh"
