--- a/Certification App/Src/Responsive Certification Status Screen.fx.yaml
+++ b/Certification App/Src/Responsive Certification Status Screen.fx.yaml
@@ -4709,12 +4709,9 @@
                 Height: =28
                 Icon: =Icon.Reload
                 OnSelect: |-
-                    =Patch(
+                    =UpdateIf(
                         CertificationOrder,
-                        LookUp(
-                            CertificationOrder,
-                            ID = varCertificateStatus.ID
-                        ),
+                            ID = varCertificateStatus.ID,
                         {Status: "Manager Approved"}
                     );
                     Notify("Reload Successfully", NotificationType.Success,1700);
@@ -5998,16 +5995,17 @@
             Color: =RGBA(128, 128, 128, 1)
             Height: =25
             Icon: =Icon.Reload
-            OnSelect: |-
-                =Patch(
+            OnSelect: |
+                =UpdateIf(
                     CertificationOrder,
-                    LookUp(
-                        CertificationOrder,
-                        ID = varCertificateStatus.ID
-                    ),
+                    ID = varCertificateStatus.ID,
                     {Status: "Manager Approved"}
                 );
-                Notify("Reload Successfully", NotificationType.Success,1700);
+                Notify(
+                    "Reload Successfully",
+                    NotificationType.Success,
+                    1700
+                );
             Tooltip: ="RELOAD"
             Visible: =Attachpopup
             Width: =30
