--- a/Certification App/Src/AskQuestion_Admin.fx.yaml
+++ b/Certification App/Src/AskQuestion_Admin.fx.yaml
@@ -1,12 +1,23 @@
 AskQuestion_Admin As screen:
     OnVisible: |-
-        =UpdateContext({varMenuVisible:false});
-        UpdateContext({varreimbursement:false});
-        UpdateContext({varmanagecourse:false});
-        UpdateContext({locShowSpinnercatalog:true});
-        Set(varUser,false);
-        Set(varMngr,false);
-        Set(varAdmin,false)
+        =Concurrent(
+            UpdateContext({varMenuVisible: false}),
+            UpdateContext({varreimbursement: false}),
+            UpdateContext({varmanagecourse: false}),
+            UpdateContext({locShowSpinnercatalog: true}),
+            Set(
+                varUser,
+                false
+            ),
+            Set(
+                varMngr,
+                false
+            ),
+            Set(
+                varAdmin,
+                false
+            )
+        )
 
     Container1_10 As groupContainer.verticalAutoLayoutContainer:
         Height: =Parent.Height
