--- a/Certification App/Src/Ask_Questions.fx.yaml
+++ b/Certification App/Src/Ask_Questions.fx.yaml
@@ -1,13 +1,30 @@
 Ask_Questions As screen:
     OnVisible: |-
-        =UpdateContext({varMenuVisible:false});
-        UpdateContext({varreimbursement:false});
-        UpdateContext({varmanagecourse:false});
-        UpdateContext({locShowSpinnercatalog:true});
-        Set(varUser,false);
-        Set(varMngr,false);
-        Set(varAdmin,false);
-        ClearCollect(questiondetails,Filter(QuestionList,CertificationName.Value = varCertificationName))
+        =Concurrent(
+            UpdateContext({varMenuVisible: false}),
+            UpdateContext({varreimbursement: false}),
+            UpdateContext({varmanagecourse: false}),
+            UpdateContext({locShowSpinnercatalog: true}),
+            Set(
+                varUser,
+                false
+            ),
+            Set(
+                varMngr,
+                false
+            ),
+            Set(
+                varAdmin,
+                false
+            ),
+            ClearCollect(
+                questiondetails,
+                Filter(
+                    QuestionList,
+                    CertificationName.Value = varCertificationName
+                )
+            )
+        )
 
     Container1_6 As groupContainer.verticalAutoLayoutContainer:
         Height: =Parent.Height
