--- a/Meeting Agenda App/Src/App.fx.yaml
+++ b/Meeting Agenda App/Src/App.fx.yaml
@@ -524,6 +524,7 @@ App As appinfo:
             }
         );*/
     StartScreen: =HomePage
+    Theme: =PowerAppsTheme
 
     Host As hostControl.DefaultHostControlVariant:
         OnCancel: =false
