--- a/Meeting Agenda App/Src/AddPollScreen.fx.yaml
+++ b/Meeting Agenda App/Src/AddPollScreen.fx.yaml
@@ -615,7 +615,7 @@ AddPollScreen As screen:
             Height: =32
             HoverColor: =RGBA(255, 255, 255, 1)
             HoverFill: =ColorFade(RGBA(56, 96, 178, 1), -20%)
-            OnSelect: |-
+            OnSelect: |
                 =//First(Filter/Search or Last(Filter/Search found. Use LookUp instead.
                 /*
                 Refresh(Questions);
@@ -643,15 +643,26 @@ AddPollScreen As screen:
                 Set(varShowpopup,false);
                 Reset(inputQuestion);*/
                 Refresh(Questions);
-                Set(QuestionID,  Last(Filter(Questions,true)).ID);
+                Set(
+                    QuestionID,
+                    Last(
+                        Filter(
+                            Questions,
+                            true
+                        )
+                    ).ID
+                );
                 Collect(
                     arrQuestions,
                     {
-                        ID: QuestionID+1,
-                        Text: inputQuestion.Text          
-                    }    
+                        ID: QuestionID + 1,
+                        Text: inputQuestion.Text
+                    }
                 );
-                Set(varShowpopup,false);
+                Set(
+                    varShowpopup,
+                    false
+                );
                 Reset(inputQuestion);
             RadiusBottomLeft: =2
             RadiusBottomRight: =2
